@@ -80,6 +80,15 @@
 #     [ABOVE/BELOW] is either ABOVE if the faction must be above the value, or 
 #     BELOW if the faction must be below the value.
 #
+# ... EVENT="FACTIONS" IDMASK="[IDMASK]" ABOVEBELOW="[A/B]" VALUE=[VALUE] NUM=[NUM] ...
+#     [IDMASK] is the Faction ID Mask, like AREA_* or *Elf* of the factions to check 
+#     [VALUE] is the numeric value that ALL the faction must be above or below when
+#     the achievement is checked in order to gain.
+#     [NUM] is the numeric value of the number of factions that match the mask which
+#     must all be above or below the VALUE in order to gain.
+#     [A/B] is either the wordABOVE if each faction must be above the value, or 
+#     the word BELOW if each faction must be below the value.
+#
 # ... EVENT="EXPLORE" AREA="[AREA]" PERCENT=[PERCENT] ...
 #     [AREA] is the name of the area whose player exploration percent should be
 #     checked, or WORLD for the whole world.
@@ -394,6 +403,20 @@ ACH_ALLQUESTOR6=EVENT="QUESTOR" DISPLAY="Complete 200 Quests" TITLE="*, Master Q
 ACH_ALLQUESTOR7=EVENT="QUESTOR" DISPLAY="Complete 500 Quests" TITLE="*, Lord of Quests" REWARDS="" NUM=500 PLAYERMASK="" QUESTMASK=""
 
 ACH_1ACHIEVER=EVENT="ACHIEVER" DISPLAY="Complete Cat Killer and Exterminator" TITLE="*, Master Quester" REWARDS="" PLAYERMASK="" ACHIEVEMENTLIST="ACH_CATHATER,ACH_EXTERMINATOR"
+
+ACH_FACTIONF5=EVENT="FACTIONS" DISPLAY="Reach the maximum favor with 5 Factions" NUM=5 VALUE=9999 IDMASK="*" ABOVEBELOW="ABOVE"
+ACH_FACTIONF15=EVENT="FACTIONS" DISPLAY="Reach the maximum favor with 15 Factions" NUM=15 VALUE=9999 IDMASK="*" TITLE="*, the Friendly" ABOVEBELOW="ABOVE"
+ACH_FACTIONF25=EVENT="FACTIONS" DISPLAY="Reach the maximum favor with 25 Factions" NUM=25 VALUE=9999 IDMASK="*" TITLE="*, the Hero" ABOVEBELOW="ABOVE"
+ACH_FACTIONF50=EVENT="FACTIONS" DISPLAY="Reach the maximum favor with 50 Factions" NUM=50 VALUE=9999 IDMASK="*" TITLE="*, the Champion" ABOVEBELOW="ABOVE"
+ACH_FACTIONF75=EVENT="FACTIONS" DISPLAY="Reach the maximum favor with 75 Factions" NUM=75 VALUE=9999 IDMASK="*" TITLE="*, the Beloved" ABOVEBELOW="ABOVE"
+ACH_FACTIONF100=EVENT="FACTIONS" DISPLAY="Reach the maximum favor with 100 Factions" NUM=100 VALUE=9999 IDMASK="*" TITLE="*, the Worshipped" ABOVEBELOW="ABOVE"
+
+ACH_FACTIONE5=EVENT="FACTIONS" DISPLAY="Achieve the least favor with 5 Factions" NUM=5 VALUE="-9999" IDMASK="*" ABOVEBELOW="BELOW"
+ACH_FACTIONE15=EVENT="FACTIONS" DISPLAY="Achieve the least favor with 15 Factions" NUM=15 VALUE="-9999" IDMASK="*" TITLE="*, the Unfriendly" ABOVEBELOW="BELOW"
+ACH_FACTIONE25=EVENT="FACTIONS" DISPLAY="Achieve the least favor with 25 Factions" NUM=25 VALUE="-9999" IDMASK="*" TITLE="*, the Malicious" ABOVEBELOW="BELOW"
+ACH_FACTIONE50=EVENT="FACTIONS" DISPLAY="Achieve the least favor with 50 Factions" NUM=50 VALUE="-9999" IDMASK="*" TITLE="*, the Vile" ABOVEBELOW="BELOW"
+ACH_FACTIONE75=EVENT="FACTIONS" DISPLAY="Achieve the least favor with 75 Factions" NUM=75 VALUE="-9999" IDMASK="*" TITLE="*, the Dastardly" ABOVEBELOW="BELOW"
+ACH_FACTIONE100=EVENT="FACTIONS" DISPLAY="Achieve the least favor with 100 Factions" NUM=100 VALUE="-9999" IDMASK="*" TITLE="*, the Villian" ABOVEBELOW="BELOW"
 
 [ACCOUNT]
 
@@ -927,4 +950,5 @@ ACCT_ACH_ALLQUESTOR3=EVENT="QUESTOR" DISPLAY="Complete 250 Quests across all cha
 ACCT_ACH_ALLQUESTOR4=EVENT="QUESTOR" DISPLAY="Complete 500 Quests across all characters" TITLE="" REWARDS="" NUM=500 PLAYERMASK="" QUESTMASK=""
 ACCT_ACH_ALLQUESTOR5=EVENT="QUESTOR" DISPLAY="Complete 1000 Quests across all characters" TITLE="" REWARDS="" NUM=1000 PLAYERMASK="" QUESTMASK=""
 ACCT_ACH_ALLQUESTOR6=EVENT="QUESTOR" DISPLAY="Complete 2500 Quests across all characters" TITLE="" REWARDS="" NUM=2500 PLAYERMASK="" QUESTMASK=""
+
 
